--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "pinia": "^2.3.0",
+    "props": "^0.2.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/compiler-sfc": "^3.5.13",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^7.0.1",
     "typescript": "~5.6.3",
