--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "dev": "vite", 
+    "build": "vite build", 
+    "serve": "vite preview", 
     "sass": "sass --watch src/scss:src/css"
   },
   "dependencies": {
@@ -20,7 +23,7 @@
     "npm-run-all2": "^7.0.1",
     "sass-embedded": "^1.83.0",
     "typescript": "~5.6.3",
-    "vite": "^6.0.1",
+    "vite": "^6.0.4",
     "vite-plugin-vue-devtools": "^7.6.5",
     "vue-tsc": "^2.1.10"
   }
